--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="year-10-website" content="width=device-width, initial-scale=1.0">
+    <title>year 10 website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
