update I have added a tile and image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1> Native Birds of New Zealand</h1>
+    <p>On this website we will look at some examples of the amazing birds we have in New Zealand</p>
+    <img src="image.png" alt="Image description" />
 </body>
 </html>
