--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1> Native Birds of New Zealand</h1>
-    <p>On this website we will look at some examples of the amazing birds we have in New Zealand</p>
-    <img src="image.png" alt="Image description" />
+    <h3>On this website we will look at some examples of the amazing birds we have in New Zealand</h3>
+    <img class="kea" src="image copy.png" 
+    alt="kea"/>          <br><a href="kea.html"> <p> Facts about the kea</p> </a>
 </body>
 </html>
