--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1> Native Birds of New Zealand</h1>
     <h3>On this website we will look at some examples of the amazing birds we have in New Zealand</h3>
     <img class="kea" src="image copy.png" 
-    alt="kea"/>          <br><a href="kea.html"> <p> Facts about the kea</p> </a>
+    alt="kea"/>          <p>From unsplash by John Yunker</p> <a href="kea.html"> <p> Facts about the kea</p> </a>
 </body>
 </html>
