--- a/kea.html
+++ b/kea.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheeet" href="style.css">
+    <link rel="stylesheet" href="KeaStyling.css">
 </head>
 <body>
-    <h3>**Population:** 1,000–5,000 estimated </h3>
-    <h3>**New Zealand status:** Endemic</h3>
-    <h3>**Conservation status:** Threatened–Nationally Endangered</h3>
-    <h3>**Found in:** Alpine and forested environments of the South Island</h3>
-    <h3>**Threats: Predation, human impacts including lead poisoning, deliberate killing, and accidents with man-made items such as cars </h3>
+    <p><span>Population:</span>1,000–5,000 estimated </p>
+    <p> <span>New Zealand status:</span> Endemic</p>
+    <p> <span>status:</span> Threatened–Nationally Endangered </p>
+    <p> <span>Found in:</span> Alpine and forested environments of the South Island </p>
+    <p> <span>Threats:</span> Predation, human impacts including lead poisoning, deliberate killing, and accidents with man-made items such as cars **</p>
+    <a href="index.html"> <p> back</p> </a>
 </body>
 </html>
