--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1> Native Birds of New Zealand</h1>
     <h3>On this website we will look at some examples of the amazing birds we have in New Zealand</h3>
-    <img class="kea" src="image copy.png" 
-    alt="kea"/>          <p>From unsplash by John Yunker</p> <a href="kea.html"> <p> Facts about the kea</p> </a>
+    <img class="leftImage" src="KeaImage.png" 
+    alt="kea"/> <img class="rightimage" src="TuiImage.png" 
+    alt="kea" float="right"/>          
+    <p>From unsplash by John Yunker <span>From unsplash by Aneta Hartmannová </span> </p> <a href="kea.html" > <p> Facts about the kea</p> </a> 
+    <a href="Tui.html" > <p class="righttext"> Facts about the tui</p> </a>
+    <img class="leftImage" src="KereruImage.png">
 </body>
 </html>
