--- a/kea.html
+++ b/kea.html
@@ -6,7 +6,7 @@
 <body>
     <p><span>Population:</span>1,000–5,000 estimated </p>
     <p> <span>New Zealand status:</span> Endemic</p>
-    <p> <span>status:</span> Threatened–Nationally Endangered </p>
+    <p> <span>Status:</span> Threatened–Nationally Endangered </p>
     <p> <span>Found in:</span> Alpine and forested environments of the South Island </p>
     <p> <span>Threats:</span> Predation, human impacts including lead poisoning, deliberate killing, and accidents with man-made items such as cars **</p>
     <a href="index.html"> <p> back</p> </a>
