--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <img class="leftImage" src="KeaImage.png" 
     alt="kea"/> <img class="rightimage" src="TuiImage.png" 
     alt="kea" float="right"/>          
-    <p>From unsplash by John Yunker <span>From unsplash by Aneta Hartmannová </span> </p> <a href="kea.html" > <p> Facts about the kea</p> </a> 
-    <a href="Tui.html" > <p class="righttext"> Facts about the tui</p> </a>
-    <img class="leftImage" src="KereruImage.png">
+   <p>From unsplash by John Yunker <span>From unsplash by Aneta Hartmannová </span> </p> 
+   <a class="lefttext" href="kea.html">Facts about the kea</a>
+   <a class="righttext" href="tui.html">Facts about the tui</a>
+   <px> <img class="leftImage" src="KereruImage.png"> </px>
 </body>
 </html>
