--- a/Kereru.html
+++ b/Kereru.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="Kereru Information" content="width=device-width, initial-scale=1.0">
     <title>Tui Information</title>
-    <link rel="stylesheet" href="KereruStyling.css">
+    <link rel="stylesheet" href="Info.css">
 </head>
 <body>
-
+    <p><span> Zealand status:</span> Endemic</p>
+    <p><span>Conservation status:</span> Not Threatened</p>
+    <p><span>Population:</span> Widespread throughout the country</p>
+    <p><span>Found in:</span> Forested areas, particularly where there is pest control</p>
+    <p><span>Threats:</span> Predation, habitat loss</p>
+    <a href="https://www.doc.govt.nz/nature/native-animals/birds/birds-a-z/nz-pigeon-kereru/"> <p>Department of conservation</p> </a>
+    <a href="index.html"> <p> back</p> </a>
 </body>
 </html>
