--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
    <p>From unsplash by John Yunker <span>From unsplash by Aneta Hartmannová </span> </p> 
    <a class="lefttext" href="kea.html">Facts about the kea</a>
    <a class="righttext" href="tui.html">Facts about the tui</a>
-   <px> <img class="leftImage" src="KereruImage.png"> </px>
+    <img class="leftImage" src="KereruImage.png">
+    <img class="rightimage" src="piwakawakaImage.png">
+    <p>From unsplash by Tony Stoddard <span>From unsplash by Hongbin </span> </p>
+    <a class="lefttext" href="Kereru.html">Facts about the kereru</a>
+   <a class="righttext" href="piwakawaka.html">Facts about the pīwakawaka</a>
 </body>
 </html>
