--- a/Tui.html
+++ b/Tui.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="year-10-website" content="width=device-width, initial-scale=1.0">
     <title>Tui Information</title>
-    <link rel="stylesheet" href="TuiStyling.css">
+    <link rel="stylesheet" href="Info.css">
 </head>
 <body>
-
+    <p><span>New Zealand status:</span> Endemic</p>
+    <p><span>Conservation status:</span> Not Threatened</p>
+    <p><span>Population:</span> Can be locally abundant where there is good pest control and flowering/fruiting habitat.</p>
+    <p><span>Found in:</span> North, South and Stewart Islands, and their offshore islands</p>
+    <p><span>Threats:</span> Predation, habitat loss</p>
+    <a href="https://www.doc.govt.nz/nature/native-animals/birds/birds-a-z/tui/"> <p>Department of conservation</p> </a>
+    <a href="index.html"> <p> back</p> </a>
 </body>
 </html>
