--- a/kea.html
+++ b/kea.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="KeaStyling.css">
+    <meta charset="UTF-8">
+    <meta name="year-10-website" content="width=device-width, initial-scale=1.0">
+    <title>Tui Information</title>
+    <link rel="stylesheet" href="Info.css">
 </head>
 <body>
     <p><span>Population:</span>1,000–5,000 estimated </p>
     <p> <span>New Zealand status:</span> Endemic</p>
     <p> <span>Status:</span> Threatened–Nationally Endangered </p>
     <p> <span>Found in:</span> Alpine and forested environments of the South Island </p>
-    <p> <span>Threats:</span> Predation, human impacts including lead poisoning, deliberate killing, and accidents with man-made items such as cars **</p>
+    <p> <span>Threats:</span> Predation, human impacts including lead poisoning, deliberate killing, and accidents with man-made items such as cars</p>
+    <a href="https://www.doc.govt.nz/nature/native-animals/birds/birds-a-z/kea/"> <p>Department of conservation</p> </a>
     <a href="index.html"> <p> back</p> </a>
 </body>
 </html>
