--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!---Intro--->
     <h1> Native Birds of New Zealand</h1>
     <h3>On this website we will look at some examples of the amazing birds we have in New Zealand</h3>
-    <img class="leftImage" src="KeaImage.png" 
-    alt="kea"/> <img class="rightimage" src="TuiImage.png" 
-    alt="kea" float="right"/>          
+
+<!---Kea and Tui--->
+   <img class="leftImage" src="KeaImage.png" alt="Kea"/> 
+   <img class="rightimage" src="TuiImage.png" alt="Tui"/>          
    <p>From unsplash by John Yunker <span>From unsplash by Aneta Hartmannová </span> </p> 
    <a class="lefttext" href="kea.html">Facts about the kea</a>
-   <a class="righttext" href="tui.html">Facts about the tui</a>
+   <a class="righttext" href="tui.html">Facts about the tui <font-family="time new roman"> </font-family></a>
+
+<!---Kereru and piwakawaka--->
     <img class="leftImage" src="KereruImage.png">
     <img class="rightimage" src="piwakawakaImage.png">
     <p>From unsplash by Tony Stoddard <span>From unsplash by Hongbin </span> </p>
     <a class="lefttext" href="Kereru.html">Facts about the kereru</a>
-   <a class="righttext" href="piwakawaka.html">Facts about the pīwakawaka</a>
+    <a class="righttext" href="piwakawaka.html">Facts about the pīwakawaka</a>
+
 </body>
 </html>
