--- a/Kereru.html
+++ b/Kereru.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Kereru Information" content="width=device-width, initial-scale=1.0">
-    <title>Tui Information</title>
+    <title>Kereru Information</title>
     <link rel="stylesheet" href="Info.css">
 </head>
 <body>
@@ -13,6 +13,6 @@
     <p><span>Found in:</span> Forested areas, particularly where there is pest control</p>
     <p><span>Threats:</span> Predation, habitat loss</p>
     <a href="https://www.doc.govt.nz/nature/native-animals/birds/birds-a-z/nz-pigeon-kereru/"> <p>Department of conservation</p> </a>
-    <a href="index.html"> <p> back</p> </a>
+    <a href="index.html"> <p> Back</p> </a>
 </body>
 </html>
