--- a/Tui.html
+++ b/Tui.html
@@ -13,6 +13,6 @@
     <p><span>Found in:</span> North, South and Stewart Islands, and their offshore islands</p>
     <p><span>Threats:</span> Predation, habitat loss</p>
     <a href="https://www.doc.govt.nz/nature/native-animals/birds/birds-a-z/tui/"> <p>Department of conservation</p> </a>
-    <a href="index.html"> <p> back</p> </a>
+    <a href="index.html"> <p> Back</p> </a>
 </body>
 </html>
