--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img class="leftImage" src="KereruImage.png">
     <img class="rightimage" src="piwakawakaImage.png">
     <p>From unsplash by Tony Stoddard <span>From unsplash by Hongbin </span> </p>
-    <a class="lefttext" href="Kereru.html">Facts about the kereru</a>
+    <a class="lefttext" href="Kereru.html"> about the kereru </a>
     <a class="righttext" href="piwakawaka.html">Facts about the pīwakawaka</a>
 
 </body>
