--- a/kea.html
+++ b/kea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="year-10-website" content="width=device-width, initial-scale=1.0">
-    <title>Tui Information</title>
+    <title>Kea Information</title>
     <link rel="stylesheet" href="Info.css">
 </head>
 <body>
@@ -13,6 +13,6 @@
     <p> <span>Found in:</span> Alpine and forested environments of the South Island </p>
     <p> <span>Threats:</span> Predation, human impacts including lead poisoning, deliberate killing, and accidents with man-made items such as cars</p>
     <a href="https://www.doc.govt.nz/nature/native-animals/birds/birds-a-z/kea/"> <p>Department of conservation</p> </a>
-    <a href="index.html"> <p> back</p> </a>
+    <a href="index.html"> <p> Back</p> </a>
 </body>
 </html>
