--- a/piwakawaka.html
+++ b/piwakawaka.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="year-10-website" content="width=device-width, initial-scale=1.0">
-    <title>Tui Information</title>
+    <title>Piwakawaka Information</title>
     <link rel="stylesheet" href="Info.css">
 </head>
 <body>
@@ -11,6 +11,6 @@
 <p><span>Conservation status:</span> North and South Island forms are Not Threatened, Chatham Island form is At Risk–Naturally Uncommon</p>
 <p><span>Found in:</span> Throughout New Zealand</p>
 <a href="https://www.doc.govt.nz/nature/native-animals/birds/birds-a-z/fantail-piwakawaka/"> <p>Department of conservation</p> </a>
-    <a href="index.html"> <p> back</p> </a>
+    <a href="index.html"> <p> Back</p> </a>
 </body>
 </html>
