--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
     <h3>On this website we will look at some examples of the amazing birds we have in New Zealand</h3>
 
 <!---Kea and Tui--->
-   <img class="leftImage" src="KeaImage.png" alt="Kea"/> 
-   <img class="rightimage" src="TuiImage.png" alt="Tui"/>          
+   <a href="kea.html"><img class="leftImage" src="KeaImage.png" alt="Kea"></a>  
+   <a href="Tui.html"><img class="rightimage" src="TuiImage.png" alt="Tui"/></a>         
    <p>From unsplash by John Yunker <span>From unsplash by Aneta Hartmannová </span> </p> 
    <a class="lefttext" href="kea.html">Facts about the kea</a>
    <a class="righttext" href="tui.html">Facts about the tui <font-family="time new roman"> </font-family></a>
 
 <!---Kereru and piwakawaka--->
-    <img class="leftImage" src="KereruImage.png">
-    <img class="rightimage" src="piwakawakaImage.png">
+    <a href="Kereru.html"><img class="leftImage" src="KereruImage.png"></a>
+    <a href="piwakawaka.html"><img class="rightimage" src="piwakawakaImage.png"></a>
     <p>From unsplash by Tony Stoddard <span>From unsplash by Hongbin </span> </p>
     <a class="lefttext" href="Kereru.html"> about the kereru </a>
     <a class="righttext" href="piwakawaka.html">Facts about the pīwakawaka</a>
-
 </body>
 </html>
