--- a/Kereru.html
+++ b/Kereru.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Info.css">
 </head>
 <body>
-    <p><span> Zealand status:</span> Endemic</p>
+    <p><span>New Zealand status:</span> Endemic</p>
     <p><span>Conservation status:</span> Not Threatened</p>
     <p><span>Population:</span> Widespread throughout the country</p>
     <p><span>Found in:</span> Forested areas, particularly where there is pest control</p>
